--- a/day04/5.http报文&状态码/1.GET请求报文.md
+++ b/day04/5.http报文&状态码/1.GET请求报文.md
@@ -15,10 +15,10 @@
     Cookie: Webstorm-9af2238=09820128-3adb-43e4-8242-a6f65c9e523a
     空行
     空行
-## 报文首行
+## 请求报文首行
     GET http://localhost:3000/?name=kobe&password=123 HTTP/1.1
     -请求方式 协议名://主机地址:端口号/？urlencoded编码形式的参数 协议名/版本
-## 报文头
+## 请求报文头
     Host: localhost:3000
        --发送请求的目标主机：主机名:端口号
     Connection: keep-alive
@@ -45,6 +45,6 @@
        -- Webstorm给你种下的cookie
 ## 空行
 
-## 报文体
+## 请求报文体
     GET请求没有报文体
 
