--- a/Ajax/4.跨域问题/跨域问题总结.md
+++ b/Ajax/4.跨域问题/跨域问题总结.md
@@ -23,7 +23,7 @@
       console.log(inputNode.value)
     </script>
 
-### 3.非同源受到哪些限制？
+### 3.非同源受到哪些限制？即：跨域了你不能干那些事情
     1. Cookie不能读取；
     2. DOM无法获得；
     3. Ajax请求不能获取数据
